--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,18 +5,26 @@
     package="com.example.buddychat"
     >
 
+    <!-- Non-BuddySDK related; this is for our WebSocket chat -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- STT & TTS -->
     <uses-permission android:name="com.bfr.buddy.resource.SPEECH" />
     <uses-permission android:name="com.bfr.buddy.resource.LISTEN" />
 
-    <uses-permission android:name="com.bfr.buddy.resource.GUI"    />
-    <uses-permission android:name="com.bfr.buddy.resource.FACE"   />
-    <uses-permission android:name="com.bfr.buddy.resource.LEDS"   />
+    <!-- Emotions Module -->
+    <uses-permission android:name="com.bfr.buddy.resource.GUI"  />
+    <uses-permission android:name="com.bfr.buddy.resource.FACE" />
+    <uses-permission android:name="com.bfr.buddy.resource.LEDS" />
 
-    <uses-permission android:name="com.bfr.buddy.resource.HEAD"         />
-    <uses-permission android:name="com.bfr.buddy.resource.WHEELS"        />
+    <!-- AudioTracking sensors -->
     <uses-permission android:name="com.bfr.buddy.resource.SENSOR_MODULE" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Nodding the head "YES" or "NO" -->
+    <uses-permission android:name="com.bfr.buddy.resource.HEAD" />
+
+    <!-- Disabling this for now, we aren't going to use it probably..? -->
+    <!-- <uses-permission android:name="com.bfr.buddy.resource.WHEELS"  /> -->
 
     <application
         android:name="com.example.buddychat.MainApplication"
@@ -32,17 +40,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BuddyChat"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.buddychat.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/BuddyTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
+            <intent-filter>
+                <action   android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
